<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="滤镜功能">
            <menu>
                <item
                    android:id="@+id/nav_BW"
                    android:title="@string/menu_BW" />
                <item
                    android:id="@+id/nav_Relief"
                    android:title="@string/menu_Relief" />
                <item
                    android:id="@+id/nav_sharpening"
                    android:title="@string/menu_sharpening" />
                <item
                    android:id="@+id/nav_vague"
                    android:title="@string/menu_vague" />
            </menu>
        </item>
    </group>

    <item android:title="美颜功能">
        <menu>
            <item
                android:id="@+id/nav_SG"
                android:title="@string/menu_SG" />
            <item
                android:id="@+id/nav_SW"
                android:title="@string/menu_SW" />
        </menu>
    </item>

</menu>
